feat: 新增 food api > 計算鸚鵡每日攝取量
